# mna-mlops-sep2025-eq25

./: Makefile  README.md  environment.yml  pyproject.toml
.dvc/: config
data/processed/a01313663/: .gitignore  obesity_estimation.csv.dvc  obesity_estimation_clean.csv.dvc
data/raw/: .gitignore
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_Cleaning_a01313663.ipynb  01_Cleaning_a01796211.ipynb  01_EDA_a01313663.ipynb
