[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Publicmlops"
version = "0.0.1"
description = "Repositorio de trabajo sobre la materia de mlops para desarrollo del equipo 25 de la maestr\u00eda de inteligencia artificial aplicada en el tecnol\u00f3gico de monterrey"
authors = [
  { name = "equipo25" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["Publicmlops"]
force_sort_within_sections = true


